--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;
   margin: 20px;
-  background-color: #ffffff; /* fondo blanco */
+  background-color: #ffffff;
 }
 
 h1, h2 {
@@ -18,7 +18,7 @@ h1, h2 {
   overflow-x: auto;
   scroll-behavior: smooth;
   padding: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .malla::-webkit-scrollbar {
@@ -30,7 +30,7 @@ h1, h2 {
 }
 
 .semestre {
-  flex: 0 0 280px; /* mantiene todos los semestres en fila */
+  flex: 0 0 280px;
 }
 
 .semestre h2 {
@@ -83,14 +83,14 @@ h1, h2 {
 }
 
 .descripcion {
-  margin-top: 30px;
+  margin-top: 25px;
   background-color: #fff;
-  padding: 15px;
+  padding: 12px;
   border-radius: 10px;
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 400px;
   text-align: center;
   border: 2px solid #f8bbd0;
   color: #880e4f;
+  margin-left: auto;
+  margin-right: auto;
 }
