--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: sans-serif;
   margin: 20px;
@@ -10,6 +9,7 @@ h1, h2 {
   color: #880e4f;
 }
 
+/* CONTENEDOR DE SEMESTRES */
 .malla {
   display: flex;
   flex-direction: row;
@@ -18,12 +18,13 @@ h1, h2 {
   overflow-x: auto;
   scroll-behavior: smooth;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .malla::-webkit-scrollbar {
   height: 10px;
 }
+
 .malla::-webkit-scrollbar-thumb {
   background: #ad1457;
   border-radius: 5px;
@@ -38,6 +39,7 @@ h1, h2 {
   color: #ad1457;
 }
 
+/* BLOQUES DE RAMOS */
 .ramo {
   padding: 12px;
   border-radius: 12px;
@@ -82,10 +84,11 @@ h1, h2 {
   transform: rotate(-45deg);
 }
 
+/* PANEL DE DESCRIPCIÓN ABAJO */
 .descripcion {
-  margin-top: 25px;
+  margin-top: 20px;
   background-color: #fff;
-  padding: 12px;
+  padding: 15px;
   border-radius: 10px;
   max-width: 400px;
   text-align: center;
