--- a/style.css
+++ b/style.css
@@ -76,10 +76,12 @@ h1, h2 {
   content: '';
   position: absolute;
   top: 50%;
-  left: -5%;
-  width: 110%;
-  border-top: 3px solid #880e4f;
+  left: 0;
+  width: 100%;
+  height: 0;
+  border-top: 2px solid #880e4f;
   transform: rotate(-45deg);
+  transform-origin: center;
 }
 
 /* Panel inferior de descripción si se usa */
