--- a/style.css
+++ b/style.css
@@ -75,13 +75,14 @@ h1, h2 {
 .ramo.aprobado::after {
   content: '';
   position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
+  top: 10px;
+  left: 10px;
+  width: calc(100% - 20px);
   height: 0;
   border-top: 2px solid #880e4f;
   transform: rotate(-45deg);
   transform-origin: center;
+  pointer-events: none;
 }
 
 /* Panel inferior de descripción si se usa */
