--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h1, h2 {
   transition: transform 0.2s ease-in-out;
   box-shadow: 0 3px 6px rgba(0,0,0,0.1);
   position: relative;
+  overflow: hidden;
 }
 
 .ramo:hover {
@@ -77,7 +78,7 @@ h1, h2 {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 20%;
+  width: 60%;
   height: 0;
   border-top: 2px solid #880e4f;
   transform: translate(-50%, -50%) rotate(-45deg);
